--- a/views/welcome.pug
+++ b/views/welcome.pug
@@ -3,8 +3,8 @@ extends layout
 block content
     ul.list-group
         li.list-group-item
-            h5 Browse movies, rate them, and add them to our watchlist.
+            h5 Browse movies, rate them, and add them to your watchlist.
         li.list-group-item
-            h5 Get info about specific and a list of movies similar to it.
+            h5 Get info about specific movies and a list of movies similar to them.
         li.list-group-item
-            h5 Recommendatios will be generated based on your browsing habits.
+            h5 Recommendations will be generated based on your ratings.
