--- a/views/login.pug
+++ b/views/login.pug
@@ -27,3 +27,6 @@ block content
             .form-group
                 input#password.form-control(type='password' name='password' placeholder='Password', required = '')
             button.btn.btn-primary.btn-block(type='submit') Submit
+            br
+            a(href="/auth/login") 
+                h6 Login ?
